--- a/salve-idea/src/main/java/salve/idea/config/SalveConfigurationForm.form
+++ b/salve-idea/src/main/java/salve/idea/config/SalveConfigurationForm.form
@@ -13,14 +13,14 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="27b59" class="javax.swing.JTextArea" binding="salveIDEAIntegrationPluginTextArea" default-binding="true">
+      <component id="27b59" class="javax.swing.JTextArea" binding="salve2IDEAIntegrationTextArea" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Salve IDEA Integration Plugin&#10;&#10;(c) Peter Ertl, 2008, mailto: peter@moreinput.de&#10;&#10;see http://code.google.com/salve&#10;&#10;This plugin is licensed under Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)&#10;&#10;Thanks to Igor Vaynberg for his great work! "/>
+          <text value="Salve-2 IDEA Integration Plugin&#10;&#10;(c) Peter Ertl, 2009, mailto: peter@moreinput.de&#10;&#10;see http://code.google.com/salve&#10;&#10;This plugin is licensed under Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)&#10;&#10;Thanks to Igor Vaynberg for his great work! "/>
         </properties>
       </component>
     </children>
